--- a/buttons.html
+++ b/buttons.html
@@ -51,14 +51,6 @@
     <button onclick="window.location.href='invoice-manager.html?loggedIn=true'">MANAGE INVOICES</button>
     <button onclick="window.location.href='dc-index.html?loggedIn=true'">DELIVERY CHALLAN CREATION</button>
     <button onclick="window.location.href='challan-manager.html?loggedIn=true'">MANAGE DELIVERY CHALLANS</button>
-
-    
-    <button onclick="logout()">Logout</button>
-
-    <script>
-        function logout() {
-            window.location.href = 'login.html';
-        }
-    </script>
+    <button onclick="window.location.href='purchase-invoice-manager.html?loggedIn=true'">MANAGE PURCHASE INVOICES</button>
 </body>
 </html>
