--- a/buttons.html
+++ b/buttons.html
@@ -51,6 +51,7 @@
     <button onclick="window.location.href='invoice-manager.html?loggedIn=true'">MANAGE INVOICES</button>
     <button onclick="window.location.href='dc-index.html?loggedIn=true'">DELIVERY CHALLAN CREATION</button>
     <button onclick="window.location.href='challan-manager.html?loggedIn=true'">MANAGE DELIVERY CHALLANS</button>
-    <button onclick="window.location.href='purchase-invoice-manager.html?loggedIn=true'">MANAGE PURCHASE INVOICES</button>
+    <button onclick="window.location.href='purchase-invoice-create.html?loggedIn=true'">ENTER PURCHASE INVOICE</button>
+    <button onclick="window.location.href='purchase-invoice-manager.html?loggedIn=true'">VIEW PURCHASE INVOICES</button>
 </body>
 </html>
