--- a/purchase-invoice-create.html
+++ b/purchase-invoice-create.html
@@ -22,10 +22,12 @@
 
         <div class="form-section">
             <h2>Supplier Details</h2>
-            <label for="supplierName">Supplier Name:</label>
-            <input type="text" id="supplierName" name="supplierName" required>
+            <label for="supplierDropdown">Supplier Name:</label>
+            <select id="supplierDropdown" required>
+                <option value="">Select a Supplier</option>
+            </select>
             <label for="supplierGST">Supplier GSTIN:</label>
-            <input type="text" id="supplierGST" name="supplierGST" required>
+            <input type="text" id="supplierGST" name="supplierGST" readonly>
         </div>
 
         <div class="form-section">
